# omega-wtk-project

./: .clang-tidy  .dockerignore  .gitignore  .gn  AUTOM.build  AUTOMDEPS  BUILD.gn  CMakeLists.txt  Checklist.md  Dockerfile  Doxyfile  Doxyfile.config  LICENSE  README.md  TODO  build.gradle  deps  deps.py  extra.json  local.properties  omega-graphics-doxygen.css  settings.gradle
external-libs/icu-69/: BUILD.gn  icudt.py
external-libs/libjpeg-turbo/: BUILD.gn  jconfig.h.in  jconfigint.h.in
external-libs/libpng/: BUILD.gn
external-libs/libtiff/: BUILD.gn  tif_config.h.in  tiffconf.h.in
external-libs/openssl/: BUILD.gn  vc.bat
external-libs/pcre2/: BUILD.gn
external-libs/zlib/: BUILD.gn
gn/: AppleFramework.py  BUILDCONFIG.gn  ConfigFile.py  EXPORT.gni  ExternalExports.gni  ExternalLibs.gni  OmegaWTK.gni  PkgConf.py  PyUtils.py  THIRD_PARTY.json  ThirdParty.py  __copy.py  assetc.py  codesign.py  config_file.cmake  copy.py  external_lib.py  ibtool.py  install_name.py  shaderc.py
gn/toolchain/: BUILD.gn
lib/: CMakeLists.txt  CoreGraphics.cpp  Info.plist  OmegaWTK-C.cpp  OmegaWTK.cpp  pch.cpp  version.plist
lib/Composition/: BDCompositionDevice.cpp  BDCompositionDevice.h  BDCompositionFontFactory.cpp  BDCompositionFontFactory.h  BDCompositionImage.cpp  BDCompositionImage.h  BDCompositionRenderTarget.cpp  BDCompositionRenderTarget.h  BDCompositionVisualTree.h  Backend.cpp  BackendPriv.cpp  BackendPriv.h  Bitmap.cpp  Brush.cpp  CMakeLists.txt  CTFontEngine.mm  Canvas.cpp  CocoaRenderTargetFrameScheduler.h  CocoaRenderTargetFrameScheduler.mm  Color.cpp  Compositor.cpp  DWriteFontEngine.cpp  GeometricGraphicsPath.cpp  Layer.cpp  LayerAnimation.cpp  Text.cpp  View.cpp  ViewRenderTarget.cpp  Visual.cpp
lib/Composition/dx/: DCVisualTree.cpp  DCVisualTree.h  DXBDCompositionDevice.cpp  DXBDCompositionDevice.h  DXBDCompositionFontFactory.cpp  DXBDCompositionFontFactory.h  DXBDCompositionImage.cpp  DXBDCompositionImage.h  DXBDCompositionRenderTarget.cpp  DXBDCompositionRenderTarget.h  DirectXBackend.cpp  DirectXBackend.h
lib/Composition/macos/: Comp.mm  Compositor_macOS.h  MetalBackend.h  MetalBackend.mm  OmegaWTKShaders.metal  QuartzBackend.h  QuartzBackend.mm
lib/Composition/mtl/: MTLBDCALayerTree.h  MTLBDCALayerTree.mm  MTLBDCompositionDevice.h  MTLBDCompositionDevice.mm  MTLBDCompositionFontFactory.h  MTLBDCompositionFontFactory.mm  MTLBDCompositionImage.h  MTLBDCompositionImage.mm  MTLBDCompositionRenderTarget.h  MTLBDCompositionRenderTarget.mm  MTLBDTriangulator.h  MTLBDTriangulator.mm  MetalBackend.h  MetalBackend.mm  MetalBridgeHeader.h  OmegaWTKShaders.metal  QuartzBackend.mm
lib/Composition/vk/: VKBDCompositionDevice.cpp  VKBDCompositionDevice.h  VKBDCompositionRenderTarget.h
lib/Composition/win/: Comp.cpp  Compositor_Win32.h  DCVisualTree.cpp  DCVisualTree.h  DirectXBackend.cpp
lib/Core/: AssetsPriv.h  CMakeLists.txt  Core.cpp  FS.cpp  FSCocoa.h  FSCocoa.mm  ImgCodec.cpp  JSON.cpp  VideoCodec.cpp  XML.cpp
lib/Media/: AudioCaptureSession.cpp  CMakeLists.txt  ImgCodec.cpp  VideoCapture.cpp  VideoCodec.cpp
lib/Media/macos/: AVFVideoCapture.mm  VideoToolboxCodec.mm
lib/Media/win/: D3D12VideoCodec.cpp  WinVideoCapture.cpp
lib/Native/: CMakeLists.txt  NativeApp.cpp  NativeCompHandler.cpp  NativeDialog.cpp  NativeEvent.cpp  NativeItem.cpp  NativeMenu.cpp  NativeWindow.cpp
lib/Native/gtk/: GTKApp.cpp  GTKItem.cpp
lib/Native/macos/: CocoaApp.h  CocoaApp.mm  CocoaAppWindow.h  CocoaAppWindow.mm  CocoaDialog.h  CocoaDialog.mm  CocoaEvent.mm  CocoaItem.mm  CocoaMenu.h  CocoaMenu.mm  CocoaUtils.mm  MakeItem.h  MakeItem.mm
lib/Native/win/: HWNDFactory.cpp  HWNDFactory.h  HWNDItem.cpp  MakeItem.cpp  MakeItem.h  WinAppWindow.cpp  WinAppWindow.h  WinDialog.cpp  WinDialog.h  WinEvent.cpp  WinMenu.cpp  WinMenu.h
lib/UI/: App.cpp  AppWindow.cpp  ButtonBase.cpp  CMakeLists.txt  Clickable.cpp  DropDown.cpp  Label.cpp  Layout.cpp  Menu.cpp  Panel.cpp  PushButton.cpp  Stack.cpp  Text.cpp  TextInput.cpp  VideoView.cpp  View.cpp  ViewAnimator.cpp  Widget.cpp  WidgetTreeHost.cpp
lib/Widgets/: App.cpp  CMakeLists.txt  Label.cpp  NativeItem_Mac.h  NativeItem_Mac.mm  NativeItem_Win.cpp  NativeItem_Win.h  Widget.cpp
src/: CMakeLists.txt  Info.plist.in  OmegaWTKM.cpp  version.plist.in
src/Composition/: Animation.cpp  BDCompositionImage.cpp  BDCompositionRenderTarget.cpp  BDCompositionVisualTree.cpp  BDCompositionVisualTree.h  Backend.cpp  Brush.cpp  CMakeLists.txt  CTFontEngine.mm  Canvas.cpp  Compositor.cpp  Compositor.h  CompositorClient.cpp  DWriteFontEngine.cpp  GeometricGraphicsPath.cpp  Layer.cpp  Path.cpp  ViewRenderTarget.cpp  Visual.cpp
src/Composition/backend/: Execution.cpp  RenderTarget.cpp  RenderTarget.h  RenderTargetStore.h  VisualTree.h
src/Composition/dx/: DCVisualTree.cpp  DCVisualTree.h  DXBDCompositionDevice.h
src/Composition/mtl/: MTLBDCompositionImage.h  MTLBDCompositionRenderTarget.h  MTLBDTriangulator.h
src/Composition/vk/: VKBDCompositionDevice.cpp
src/Core/: AssetsPriv.h  CMakeLists.txt  Core.cpp  FS.cpp  FSCocoa.h  FSCocoa.mm  MultiThreading.cpp  XML.cpp
src/Media/: AudioCapture.cpp  AudioVideoProcessor.h  AudioVideoProcessorContext.cpp  CMakeLists.txt  ImgCodec.cpp  ImgCodecPriv.h  JpegCodec.cpp  MediaPlaybackSession.cpp  PngCodec.cpp  TiffCodec.cpp  VideoCodec.cpp
src/Media/avf/: AVFAudioVideoCapture.mm  AVFAudioVideoProcessor.mm
src/Media/ffmpeg/: FFmpegAudioVideoCapture.cpp  (+1 more)
src/Native/: CMakeLists.txt  NativeApp.cpp  NativeDialog.cpp  NativeItem.cpp  NativeMenu.cpp  NativeWindow.cpp
src/UI/: App.cpp  AppWindow.cpp  CMakeLists.txt  Menu.cpp  Notification.cpp  SVGView.cpp  Style.cpp  Text.cpp  UIView.cpp  VideoView.cpp  View.cpp  Widget.cpp  WidgetTreeHost.cpp
src/Widgets/: Layout.cpp  Text.cpp
tests/: CMakeLists.txt
tests/BasicAppTest/: main.cpp
tests/COnly/: main.c
tests/QueueHeapTest/: main.cpp
tests/RootWidget/: .gitignore  CMakeLists.txt  Main.cpp  Main.h
tests/SchedulerTest/: main.cpp
tests/SwiftImport/: CMakeLists.txt
tests/VideoViewTest/: main.cpp
tests/win/: Main.cpp  pch.h  test.rc
(+298 files in other folders)
